fix some minor issues on the home page (#28)
* fix: layout issues in footer

this makes the subfooter to follow the design

* fix: footer hiding text

* fix: too much white space on mobile view in hero

* fix: make the rewind section flow from edges

* feat: cycle title emotes

--- a/src/scss/sections/home/_footer.scss
+++ b/src/scss/sections/home/_footer.scss
@@ -6,6 +6,10 @@
         padding-top: unset;
     }
 
+    &.footer {
+        background: var(--footer-gradient);
+    }
+
     .footer__main {
         border-radius: 30px;
         border: 2px solid hsl(var(--clr-purple));
@@ -63,7 +67,9 @@
                 color: #fff;
                 opacity: 0.6;
             }
-            transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            transition:
+                border-color 0.3s ease-in-out,
+                box-shadow 0.3s ease-in-out;
             box-shadow: 0;
             // caret-color: rgb(0, 200, 0);
         }
@@ -72,6 +78,19 @@
         input:focus {
             box-shadow: 0 2px 20px -2px hsl(222, 68%, 27%);
             border-color: hsl(222, 89%, 65%);
+        }
+    }
+    .footer__sub {
+        border-top: 0;
+        a {
+            transition: color 0.3s;
+        }
+        a:hover {
+            color: #fff;
+        }
+
+        @include bp(desktop) {
+            --gap: 10px;
         }
     }
 }
